[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/filur.gd" type="Script" id=3]
[ext_resource path="res://vägg.png" type="Texture" id=4]
[ext_resource path="res://mark.png" type="Texture" id=5]
[ext_resource path="res://scripts/Bygga_saker.gd" type="Script" id=6]
[ext_resource path="res://vatten.png" type="Texture" id=7]
[ext_resource path="res://scripts/värld_för_navigation.gd" type="Script" id=8]
[ext_resource path="res://scener/test_karaktär.tscn" type="PackedScene" id=9]
[ext_resource path="res://scener/Stockpiles.tscn" type="PackedScene" id=10]
[ext_resource path="res://scener/yxa.tscn" type="PackedScene" id=11]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 ) ]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=7]
resource_local_to_scene = true
0/name = "mark.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 5 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "vatten.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "vägg.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="värld_för_navigation" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 8 )

[node name="Stockpiles" parent="." instance=ExtResource( 10 )]
position = Vector2( 727, 466 )

[node name="Bygga saker" type="Node2D" parent="."]
position = Vector2( 0, -2 )
script = ExtResource( 6 )

[node name="Stockpiles2" parent="." instance=ExtResource( 10 )]
position = Vector2( 351, 488 )

[node name="KinematicBody2D2" parent="." instance=ExtResource( 9 )]
position = Vector2( 26, 87 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 369, 228 )
z_index = 4

[node name="Sprite" parent="." instance=ExtResource( 11 )]
position = Vector2( 467, 117 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 2, -2 )
z_index = -2
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
centered_textures = true
bake_navigation = true
format = 1

[node name="Character" type="KinematicBody2D" parent="." groups=["filur"]]
position = Vector2( 142, 18 )
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="Character"]
modulate = Color( 0.678431, 0.356863, 1, 1 )
texture = ExtResource( 4 )

[node name="NavigationAgent2D" type="Node" parent="Character"]

[node name="Camera2D" type="Camera2D" parent="Character"]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Character/Camera2D"]
layer = 4

[node name="avpå vatten" type="TextureButton" parent="Character/Camera2D/CanvasLayer"]
margin_left = 82.0
margin_top = 63.0
margin_right = 122.0
margin_bottom = 103.0
texture_normal = ExtResource( 7 )

[node name="avpå golv" type="TextureButton" parent="Character/Camera2D/CanvasLayer"]
margin_left = 160.0
margin_top = 64.0
margin_right = 200.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )

[node name="avpå building" type="Button" parent="Character/Camera2D/CanvasLayer"]
margin_left = 60.0
margin_top = 124.0
margin_right = 305.0
margin_bottom = 159.0

[node name="avpå vägg" type="TextureButton" parent="Character/Camera2D/CanvasLayer"]
margin_left = 250.0
margin_top = 64.0
margin_right = 290.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="Character/Camera2D/CanvasLayer/avpå vatten" to="Bygga saker" method="_on_avp_vatten_pressed"]
[connection signal="pressed" from="Character/Camera2D/CanvasLayer/avpå golv" to="Bygga saker" method="_on_avp_golv_pressed"]
[connection signal="pressed" from="Character/Camera2D/CanvasLayer/avpå building" to="Bygga saker" method="_on_avp_building_pressed"]
[connection signal="pressed" from="Character/Camera2D/CanvasLayer/avpå vägg" to="Bygga saker" method="_on_avp_vgg_pressed"]
